# rag_testing

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.py
data_processing/: document_loader.py  vector_store.py
rag/: model.py  query.py
