[project]
name = "rag-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.6.3",
    "langchain>=0.3.17",
    "langchain-chroma>=0.2.1",
    "langchain-openai>=0.3.3",
    "openai>=1.60.2",
    "pydantic-settings>=2.7.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
]
